doc: Update TOC section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
@@ -31,7 +31,18 @@
    "id": "c2d4d379",
    "metadata": {},
    "source": [
-    "## Table of Contents"
+    "## Table of Contents\n",
+    "\n",
+    "* [Orthogonalization in ML](#orthogonalization-in-ml)\n",
+    "* [Single Number Evaluation Metric](#single-number-evaluation-metric)\n",
+    "* [Satisficing and Optimizing Metric](#satisficing-and-optimizing-metric)\n",
+    "* [Train/Dev/Test Distributions](#train-dev-test-distributions)\n",
+    "* [Size of dev and test sets](#size-of-dev-and-test-sets)\n",
+    "* [When to change to Dev/Test Sets and Metrics](#when-to-change-to-devtest-sets-and-metrics)\n",
+    "* [Why human-level performance and avoidable error?](#why-human-level-performance-and-avoidable-error)\n",
+    "* [Understanding humman-level performance](#understanding-humman-level-performance)\n",
+    "* [Surpassing Human-level Performance](#surpassing-human-level-performance)\n",
+    "* [Improving your model performance](#improving-your-model-performance)"
    ]
   },
   {
