doc: Add 'Carrying out Error Analysis' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -1,11 +1,69 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "c5f4f43a-f551-4e04-9429-4d061828894c",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Week 2: ML Strategy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d72e37eb",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aad00fc8",
+   "metadata": {},
+   "source": [
+    "## Carrying out Error Analysis\n",
+    "\n",
+    "This section explains the process of **Error Analysis**, a crucial manual diagnostic procedure used in machine learning to systematically prioritize which types of mistakes are most worthwhile to fix.\n",
+    "\n",
+    "### Purpose of Error Analysis\n",
+    "\n",
+    "* Error Anlaysis is used when a learning algorithm's performance is below the desired level (often human-level performance).\n",
+    "* The goal is to quickly estimate the **ceiling on performance** (maximum potential improvement) for fixing a specific type of error, thereby helping to prioritize development effort.\n",
+    "* The methodology is to manually examining a sample of mislabeled or misclassified examples from the development (dev) set.\n",
+    "\n",
+    "### The Simple Counting Procedure\n",
+    "\n",
+    "1.  **Collect Sample:** Get a sample of mislabeled dev set examples (e.g., 100 examples).\n",
+    "2.  **Manual Inspection:** Manually examine each mislabeled example.\n",
+    "3.  **Count and Estimate:** Count how many errors fall into a specific category (e.g., dogs misclassified as cats).\n",
+    "4.  **Calculate Ceiling:** Estimate the maximum possible improvement in accuracy if that specific error category were completely solved.\n",
+    "\n",
+    "* **Example:** If the current error rate is $10\\%$ and $5\\%$ of the errors are due to dogs:\n",
+    "    * Maximum improvement is $5\\%$ of the total error.\n",
+    "    * New error ceiling: $10\\% - (10\\% \\times 0.05) = 9.5\\%$ error. (A small relative gain.)\n",
+    "* **Example (High Potential):** If $50\\%$ of the errors are due to dogs:\n",
+    "    * New error ceiling: $10\\% - (10\\% \\times 0.50) = 5\\%$ error. (A huge relative gain, worth significant effort.)\n",
+    "\n",
+    "### Error Analysis with Multiple Categories\n",
+    "\n",
+    "When considering multiple ideas for improvement, a structured table or spreadsheet is recommended:\n",
+    "\n",
+    "| Idea/Category | Description | Data Collection |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Setup:** | List misclassified images (e.g., 1 to 100). | Create columns for each error idea (e.g., Dogs, Great Cats, Blurry Images). |\n",
+    "| **Execution:** | For each image, place a checkmark in the relevant column(s). | Use a comments section to briefly describe the mistake (e.g., \"Pit bull picture,\" \"Lion, rainy day at zoo\"). |\n",
+    "| **Prioritization:** | Calculate the percentage of total errors belonging to each category. | Focus effort on the categories that account for the largest fraction of the errors (highest performance ceiling). |\n",
+    "| **Adaptability:** | New error categories can be added on the fly during the manual inspection process (e.g., \"Instagram Filters\"). | This allows the analysis to be guided by what the data is actually showing. |\n",
+    "\n",
+    "### Conclusion\n",
+    "\n",
+    "Error analysis is a fast, low-effort procedure (often 5-10 minutes for 100 examples) that provides crucial data for making strategic, high-impact decisions, helping developers avoid spending months of work on problems with a low performance ceiling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1338d509",
+   "metadata": {},
    "source": []
   }
  ],
