doc: Add 'Table of Contents' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -18,6 +18,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9597da10",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "## Table of Contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "524216e9",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aad00fc8",
    "metadata": {},
    "source": [
