doc: Add 'Cleaning Up Incorrectly Labeled Data' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -88,6 +88,56 @@
    "cell_type": "markdown",
    "id": "1338d509",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dd332c2",
+   "metadata": {},
+   "source": [
+    "## Cleaning Up Incorrectly Labeled Data\n",
+    "\n",
+    "This section addresses the issue of **incorrectly labeled examples** (errors in the true $Y$ values) in a dataset and provides guidelines on whether and how to fix them, particularly in the context of error analysis.\n",
+    "\n",
+    "### Training Set Errors\n",
+    "\n",
+    "* **Robustness to Random Errors:** Deep learning algorithms are generally robust to random errors in the training set labels, provided the total dataset size is large and the percentage of errors is not too high. It's often acceptable to leave minor random errors as they are.\n",
+    "* **Vulnerability to Systematic Errors:** Deep learning algorithms are less robust to systematic errors (e.g., if the labeler consistently labels all white dogs as cats). Systematic errors must be addressed as they introduce damaging bias.\n",
+    "* **Training vs. Dev/Test:** It is less critical to fix labels in the training set than in the dev/test sets, which are used for crucial evaluation.\n",
+    "\n",
+    "### Dev/Test Set Errors (The Priority)\n",
+    "\n",
+    "The dev and test sets are used to evaluate models and choose between them, making label accuracy here more important.\n",
+    "\n",
+    "* **Error Analysis Integration:** During the manual error analysis process, an extra column should be added to count the percentage of mistakes where the classifier disagreed with the label simply because the label itself was incorrect in the dev set.\n",
+    "* **Decision Criterion:** Fix incorrect labels in the dev/test sets only if they make a significant difference to the ability to accurately evaluate and compare classifiers.\n",
+    "\n",
+    "| Scenario | Overall Dev Error | Error Due to Incorrect Labels | Error Due to Algorithm ($9.4\\%$) | Conclusion |\n",
+    "| :--- | :--- | :--- | :--- | :--- |\n",
+    "| **Case 1 (Low Impact)** | $10\\%$ | $0.6\\%$ ($6\\%$ of total error) | $9.4\\%$ | **Low Priority:** The $0.6\\%$ error is a small fraction of the total $10\\%$ error. Focus on the larger $9.4\\%$ algorithmic error. |\n",
+    "| **Case 2 (High Impact)** | $2\\%$ | $0.6\\%$ ($30\\%$ of total error) | $1.4\\%$ | **High Priority:** The $0.6\\%$ error is now a large fraction ($30\\%$) of the total $2\\%$ error. This noise makes it difficult to reliably compare two high-performing classifiers (e.g., $2.1\\%$ vs $1.9\\%$ error). **Fix labels first.** |\n",
+    "\n",
+    "### Guidelines for Fixing Labels\n",
+    "\n",
+    "If you decide to manually fix labels in the dev/test sets, follow these principles:\n",
+    "\n",
+    "1.  **Apply to Both:** Apply the label correction process consistently to both the dev and test sets to ensure they maintain the same data distribution.\n",
+    "2.  **Examine Correct and Incorrect Examples (Ideal):** Ideally, you should examine the labels for both examples the algorithm got wrong and examples it got right.\n",
+    "    * *Reality Check:* This is often impractical if the algorithm is highly accurate ($98\\%$ correct), as it would require checking $98\\%$ of the data. Often, teams only check labels for examples the classifier got wrong.\n",
+    "3.  **Training Set Optional:** You can choose to fix labels only in the smaller dev/test sets and leave the errors in the much larger training set. This is acceptable, although it introduces a slight distribution difference between the training and dev/test sets.\n",
+    "\n",
+    "### Importance of Human Insight\n",
+    "\n",
+    "* **Beyond Automaton:** While deep learning emphasizes feeding data to an algorithm, building practical systems still requires manual error analysis and human insight.\n",
+    "* **Prioritization Tool:** Spending a short amount of time (minutes or a few hours) manually examining data to count error categories is an extremely efficient way to prioritize development directions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53dfa2eb",
+   "metadata": {},
    "source": []
   }
  ],
