doc: Add 'Build your First System Quickly, then Iterate' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -138,6 +138,57 @@
    "cell_type": "markdown",
    "id": "53dfa2eb",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6caacd63",
+   "metadata": {},
+   "source": [
+    "## Build your First System Quickly, then Iterate\n",
+    "\n",
+    "This section advises adopting an **iterative, build-it-quick** approach when starting a brand new machine learning application to avoid prematurely prioritizing the wrong technical direction.\n",
+    "\n",
+    "### The Challenge of Prioritization\n",
+    "\n",
+    "For any new machine learning application (e.g., speech recognition), there are dozens of plausible areas for improvement (e.g., noisy backgrounds, accented speech, far-field speakers, children's speech, output fluency).\n",
+    "\n",
+    "Even experts find it difficult to prioritize which direction to focus on without first analyzing the problem's specific characteristics and current system performance.\n",
+    "\n",
+    "### The Recommended Iterative Strategy\n",
+    "\n",
+    "The recommended approach for starting a new machine learning application is to \"Build the first system quickly, then iterate.\"\n",
+    "\n",
+    "1.  **Quick Setup (The Target):** Quickly set up your dev/test sets and define the core evaluation metric (It's okay if this target needs to be adjusted later).\n",
+    "2.  **Quick Build (The Baseline):** Build an initial, functional machine learning system quickly. This should be a \"quick and dirty\" implementation — don't overcomplicate it.\n",
+    "3.  **Diagnosis and Prioritization:** Use the trained initial system to diagnose performance:\n",
+    "    * **Bias/Variance Analysis:** Determine if the problem is primarily due to avoidable bias (underfitting) or variance (overfitting).\n",
+    "    * **Error Analysis:** Manually examine the mistakes the system is making to quantify and prioritize the most frequent error categories (e.g., how many errors are due to \"far-field speech\").\n",
+    "4.  **Iterate:** Use the results of the diagnosis (e.g., high error rate on far-field speech) to rationally prioritize the next development step.\n",
+    "\n",
+    "### The Value of the Initial System\n",
+    "\n",
+    "The main value of the initial quick-and-dirty system is that it allows the team to localize the problems through analysis:\n",
+    "\n",
+    "* It moves the team from guessing what the biggest problem is to knowing the biggest problem is (e.g., $50\\%$ of errors are far-field).\n",
+    "* It provides the necessary data to apply strategic tools like Bias/Variance analysis and Error Analysis.\n",
+    "\n",
+    "### When This Advice Applies\n",
+    "\n",
+    "* **Strongly Applies:** When tackling a brand new application area where the team lacks significant prior experience.\n",
+    "* **Less Strongly Applies:** When working in an application area with significant prior experience or a large body of academic literature (e.g., face recognition) that provides a clear starting architecture.\n",
+    "\n",
+    "### Common Pitfall\n",
+    "\n",
+    "Often teams do wrong by overthinking and building a system that is too complicated at the start, wasting valuable time before even knowing if they are prioritizing the right issues."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4437e0de",
+   "metadata": {},
    "source": []
   }
  ],
