doc: Add 'Training and Testing on Different Distributions' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -189,6 +189,55 @@
    "cell_type": "markdown",
    "id": "4437e0de",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "651349f6",
+   "metadata": {},
+   "source": [
+    "## Training and Testing on Different Distributions\n",
+    "\n",
+    "This section addresses the common practice in the deep learning era of training models on data from a different distribution than the target distribution (dev/test sets) to maximize the training size.\n",
+    "\n",
+    "### The Deep Learning Data Dilemma\n",
+    "\n",
+    "Deep learning algorithms perform best with large amounts of labeled training data. Often, the available labeled data comes from two sources:\n",
+    "1.  A small amount of data from the target distribution (the data you actually care about).\n",
+    "2.  A large amount of data from a different, easily accessible distribution (e.g., crawled web images).\n",
+    "\n",
+    "### Strategy for Setting Up Train/Dev/Test Sets\n",
+    "\n",
+    "The critical rule is that the Dev and Test sets must come from the target distribution to ensure the team is optimizing performance where it matters most.\n",
+    "\n",
+    "* **Scenario:** Building a cat classifier for a mobile app (target distribution: blurry cell phone photos) using supplemental web-crawled data (different distribution: professional high-res photos).\n",
+    "\n",
+    "| Splitting Option | Dev/Test Distribution | Outcome | Recommendation |\n",
+    "| :--- | :--- | :--- | :--- |\n",
+    "| **Option 1 (Random Shuffle)** | Mixed (mostly web photos) | Sets the team's target on optimizing for the *web image* distribution, which is not the product's goal. | **Avoid this option.** |\n",
+    "| **Option 2 (Targeted Split)** | All Mobile App photos | Aims the target correctly, forcing the algorithm to generalize to the data that matters (mobile app photos). | **Recommended strategy.** |\n",
+    "\n",
+    "* **Recommended Data Split Example (Option 2):**\n",
+    "    * **Training Set:** Large, combined dataset (e.g., 200k web images + 5k mobile app images).\n",
+    "    * **Dev Set:** Small dataset (e.g., 2.5k) entirely from the mobile app distribution.\n",
+    "    * **Test Set:** Small dataset (e.g., 2.5k) entirely from the mobile app distribution.\n",
+    "\n",
+    "### Implications of Different Distributions\n",
+    "\n",
+    "* **Advantage:** Allows the team to utilize a much larger training set, leading to better overall performance.\n",
+    "* **Disadvantage:** The training distribution now differs from the dev/test distributions. This introduces the new challenge of **Data Mismatch**, which requires specialized analysis techniques (to be discussed later).\n",
+    "\n",
+    "### General Application\n",
+    "\n",
+    "This strategy applies broadly whenever the data available for training differs from the data on which the final product will be evaluated (e.g., training a car speech system using general purpose speech data accumulated over years)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8966c57",
+   "metadata": {},
    "source": []
   }
  ],
