doc: Add 'Bias and Variance with Mismatched Data Distributions' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -238,6 +238,65 @@
    "cell_type": "markdown",
    "id": "b8966c57",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f560da2",
+   "metadata": {},
+   "source": [
+    "## Bias and Variance with Mismatched Data Distributions\n",
+    "\n",
+    "This section explains how the analysis of bias and variance must be modified when the training data distribution differs from the dev/test data distribution, introducing the new diagnostic tool: the **Training-Dev Set**.\n",
+    "\n",
+    "### The Challenge of Data Mismatch\n",
+    "\n",
+    "When the training set distribution differs from the dev/test set distribution, a large gap between training error and dev error can no longer be definitively attributed to variance alone. The increase in error could be due to:\n",
+    "1.  **Variance:** The algorithm failed to generalize to unseen data from the *same* distribution.\n",
+    "2.  **Data Mismatch:** The dev set distribution is inherently *harder* or different than the training set distribution.\n",
+    "\n",
+    "### Introducing the Training-Dev Set\n",
+    "\n",
+    "To isolate the effects of variance and data mismatch, a new dataset subset is required:\n",
+    "\n",
+    "* **Training-Dev Set:** A subset of data randomly carved out from the Training Set distribution (the large source data).\n",
+    "* **Purpose:** The model is trained only on the Training Set proper, not the Training-Dev set. The Training-Dev error is measured on data that is unseen but from the same distribution as the training data.\n",
+    "\n",
+    "### Diagnostic Gaps in Data Mismatch Setting\n",
+    "\n",
+    "By measuring error across four points (HLE, Training, Training-Dev, Dev), three distinct problems can be diagnosed:\n",
+    "\n",
+    "| Gap | Calculation | Problem | Focus for Improvement |\n",
+    "| :--- | :--- | :--- | :--- |\n",
+    "| **Gap 1** | HLE - Training Error | Avoidable Bias | Focus on fitting the training data better (e.g., bigger model, better optimization). |\n",
+    "| **Gap 2** | Training-Dev Error - Training Error | Variance | Focus on generalization (e.g., regularization, more data from the training distribution). |\n",
+    "| **Gap 3** | Dev Error - Training-Dev Error | Data Mismatch | Focus on making the model robust to differences between the source data and the target data. |\n",
+    "| **Gap 4** | Test Error - Dev Error | Overfitting to Dev Set | Indicates the team over-optimized the dev set. Fix: Get a larger dev set. |\n",
+    "\n",
+    "### Example Scenarios\n",
+    "\n",
+    "| Training Error | Training-Dev Error | Dev Error | Diagnosis | Primary Focus |\n",
+    "| :---: | :---: | :---: | :--- | :--- |\n",
+    "| $1\\%$ | $9\\%$ | $10\\%$ | **High Variance** (Large Gap 2) | Reduce variance (regularization). |\n",
+    "| $1\\%$ | $1.5\\%$ | $10\\%$ | **High Data Mismatch** (Large Gap 3) | Address data mismatch (techniques for distribution shift). |\n",
+    "| $10\\%$ | $11\\%$ | $12\\%$ | **High Avoidable Bias** (Large Gap 1, assuming HLE $\\approx 0\\%$) | Reduce bias (bigger model). |\n",
+    "| $10\\%$ | $11\\%$ | $20\\%$ | High Bias + **High Data Mismatch** (Large Gaps 1 & 3) | Address bias and data mismatch. |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88cd0e08",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4ed0613",
+   "metadata": {},
    "source": []
   }
  ],
