doc: Add 'Bonus: Elaborating on Artificial Data Synthesis (ADS)' section for clarity.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -332,6 +332,69 @@
    "cell_type": "markdown",
    "id": "f8311c16",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33fe64e4",
+   "metadata": {},
+   "source": [
+    "## Bonus: Elaborating on Artificial Data Synthesis (ADS)\n",
+    "\n",
+    "Artificial Data Synthesis (ADS) is the process of generating new training examples by algorithmically transforming or combining existing data. Its primary goal is to **enrich the training distribution** to better cover the features present in the target (Dev/Test) distribution without requiring expensive, real-world data collection.\n",
+    "\n",
+    "### Primary Goals of ADS\n",
+    "\n",
+    "| Goal | Description | Example |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Data Augmentation** | Making the model robust to natural variations, often used to reduce variance. | Flipping or cropping images to create new, slightly varied training examples. |\n",
+    "| **Addressing Data Mismatch** | Specifically introducing noise or features unique to the target environment. | Adding simulated car noise or reverberation to clean studio recordings. |\n",
+    "| **Feature Balancing** | Generating more examples of rare or underrepresented categories. | Synthesizing images of rare car models or unusual street signs. |\n",
+    "\n",
+    "### Techniques Used in ADS\n",
+    "\n",
+    "The technique varies significantly depending on the data modality:\n",
+    "\n",
+    "#### A. Computer Vision (CV)\n",
+    "* **Geometric Transformations:** Flipping, rotating, translating, scaling, and cropping images.\n",
+    "* **Color/Intensity Jitter:** Randomly changing the brightness, contrast, saturation, or hue.\n",
+    "* **Cutout/MixUp/CutMix:** Cutting patches out of images and replacing them with a patch of another image or just black pixels. This encourages the model to look at the entire image context rather than focusing on the most salient feature.\n",
+    "* **Simulation:** Generating entirely synthetic images or environments using game engines or computer graphics (e.g., creating virtual cars or training a robot arm in a simulated physics environment).\n",
+    "\n",
+    "#### B. Speech and Audio Recognition\n",
+    "* **Noise Injection:** Overlaying environmental noise (e.g., car noise, crowd chatter, music) onto clean audio recordings. This is the classic technique to combat noisy backgrounds.\n",
+    "* **Reverberation:** Simulating the acoustic environment (e.g., echo in a large room or a car cabin) by convolving the clean audio with an Impulse Response (IR).\n",
+    "* **Speed Perturbation:** Adjusting the speed of speech (e.g., $\\times 0.9$ or $\\times 1.1$) to make the model robust to fast or slow talkers.\n",
+    "\n",
+    "#### C. Tabular/Structured Data\n",
+    "* **SMOTE (Synthetic Minority Oversampling Technique):** Creating synthetic examples of the minority class in unbalanced datasets by interpolating between existing minority samples.\n",
+    "* **Generative Models (GANs/VAEs):** Training a generative model on the existing data to create entirely new, realistic synthetic rows/samples.\n",
+    "\n",
+    "### The Core Engineering Risk: Data Impoverishment\n",
+    "\n",
+    "The greatest risk in ADS is **oversimplifying the synthesized distribution**, as highlighted in the transcript.\n",
+    "\n",
+    "| Concept | Explanation | Engineering Solution |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **The Set of All Possibilities ($\\mathcal{P}$)** | This is the true, infinite space of all car noises, car models, or lighting conditions in the target environment. | Ensure the source data used for synthesis (e.g., car noise recordings) is as **diverse and varied** as possible. |\n",
+    "| **The Synthesized Subset ($\\mathcal{S}$)** | This is the actual data generated (e.g., only 1 hour of car noise repeated). If $\\mathcal{S} \\ll \\mathcal{P}$, the model overfits to the small subset. | **Do not repeat noise/graphic assets.** Collect a variety of noise/graphic sources equivalent in scale to the clean data if possible (e.g., 10,000 unique hours of noise for 10,000 hours of speech). |\n",
+    "| **Dimensionality Collapse** | The model learns that a specific artifact (e.g., the sound of the labeler's coffee machine in the repeated noise track) is necessary for a correct classification, rather than learning true car noise. | Implement monitoring metrics that check for signs of overfitting to the synthesized feature, and constantly cycle or augment the noise library. |\n",
+    "\n",
+    "### When ADS Works Best\n",
+    "\n",
+    "ADS is most effective when:\n",
+    "\n",
+    "1.  **The Mismatch is Well-Defined:** Error analysis clearly pinpoints the missing feature (e.g., \"It fails on blurry images at night\").\n",
+    "2.  **Synthesis is Accurate:** The physical or mathematical process of synthesis is well-understood (e.g., adding Gaussian noise, applying known acoustic reverberation models).\n",
+    "3.  **The Synthesized Set is Rich:** Sufficient variability is introduced to cover the target feature space, avoiding repetition or reliance on overly simplistic graphics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ad9844d",
+   "metadata": {},
    "source": []
   }
  ],
