doc: Add 'Transfer Learning' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -395,6 +395,71 @@
    "cell_type": "markdown",
    "id": "7ad9844d",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea9d61b9",
+   "metadata": {},
+   "source": [
+    "## Transfer Learning\n",
+    "\n",
+    "This section describes the concept of **Transfer Learning**, detailing its mechanics, when it should be used, and its benefits.\n",
+    "\n",
+    "### Transfer Learning: Leveraging Pre-trained Knowledge\n",
+    "\n",
+    "Transfer Learning is a deep learning technique where a model trained on a **source task (Task A)** is reused as the starting point for a model on a **target task (Task B)**. This allows the target task to achieve high performance with significantly less data.\n",
+    "\n",
+    "### The Mechanism\n",
+    "\n",
+    "The core process involves taking a pre-trained neural network, removing its final output layer, and replacing it with a new output layer tailored for the new task.\n",
+    "\n",
+    "$$\n",
+    "\\text{Task A (ImageNet)} \\rightarrow \\text{Pre-trained Layers} \\rightarrow \\text{Output Layer (1000 Classes)}\n",
+    "$$\n",
+    "$$\n",
+    "\\text{Task B (Radiology)} \\rightarrow \\text{Pre-trained Layers} \\rightarrow \\text{New Output Layer (Diagnosis Classes)}\n",
+    "$$\n",
+    "\n",
+    "* **Pre-training (Task A):** A large neural network is trained on a massive dataset (e.g., millions of general images) to learn complex, low-level features (edges, textures, shapes).\n",
+    "* **Transfer:**\n",
+    "    1.  The final output layer of the pre-trained network (which predicted Task A's labels) is deleted.\n",
+    "    2.  A new output layer with randomly initialized weights ($W^{[L]}, b^{[L]}$) is added for Task B.\n",
+    "* **Fine-tuning (Task B):** The entire network (or just the new layers) is retrained using the smaller Task B dataset.\n",
+    "\n",
+    "### Fine-Tuning Options (Rule of Thumb)\n",
+    "\n",
+    "The retraining approach depends on the size of the target dataset (Task B):\n",
+    "\n",
+    "| Target Data Size | Strategy | Description |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Small Dataset (Low Data)** | **Freeze and Train Last Layer(s)** | Keep the weights of the initial layers fixed (\"frozen\") and train **only the new output layer** (and maybe the last hidden layer). This prevents overfitting the small dataset. |\n",
+    "| **Large Dataset (High Data)** | **Fine-tuning (Train All Layers)** | Use the pre-trained weights as **initialization** and train **all layers** (this is called fine-tuning). The initial pre-training serves as powerful regularization. |\n",
+    "\n",
+    "### When Transfer Learning Makes Sense\n",
+    "\n",
+    "Transfer learning provides the most significant gain when the following three conditions are met:\n",
+    "\n",
+    "1.  **Input Match:** Task A and Task B have the same input type ($X$) (e.g., both use images, or both use audio clips).\n",
+    "2.  **Data Disparity:** You have significantly more data for Task A (Source) than for Task B (Target).\n",
+    "    * *Example:* Training on 1 million general images (Task A) to help diagnose radiology scans (Task B) with only 100 examples.\n",
+    "3.  **Feature Relevance:** You suspect that low-level features learned in Task A are useful for Task B.\n",
+    "    * *Example:* Image recognition learns to detect edges and curves, which is useful for reading X-rays. Speech recognition learns the components of human voices, which is useful for detecting wake words.\n",
+    "\n",
+    "### When Transfer Learning is Unlikely to Help\n",
+    "\n",
+    "Transfer learning is not recommended (and provides minimal gain) when Task B (Target) already has as much or more data than Task A (Source).\n",
+    "\n",
+    "* If you have a large dataset for Task B, the value of each Task B example (which is highly relevant) is much higher than the value of each Task A example (which is only indirectly relevant).\n",
+    "* In this case, training a model directly on the large Task B dataset from scratch is likely to be just as effective."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3d058f8",
+   "metadata": {},
    "source": []
   }
  ],
