doc: Add 'Multi-Task Learning' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -460,6 +460,67 @@
    "cell_type": "markdown",
    "id": "d3d058f8",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b9be54e",
+   "metadata": {},
+   "source": [
+    "## Multi-Task Learning\n",
+    "\n",
+    "This section describes training one network for many tasks also known as **Multi-Task Learning**.\n",
+    "\n",
+    "Multi-Task Learning (MTL) is a deep learning approach where a single neural network is trained simultaneously on multiple related tasks. Unlike sequential Transfer Learning (Task A $\\rightarrow$ Task B), MTL is parallel, with the goal that the shared feature representation learned in the early layers benefits all tasks equally.\n",
+    "\n",
+    "### The Core Mechanism\n",
+    "\n",
+    "In MTL, the single input ($X$) leads to a single network architecture that branches out into multiple output units, each corresponding to a different task's label.\n",
+    "\n",
+    "* **Input Example:** An image ($x^{(i)}$) from a self-driving car camera.\n",
+    "* **Multiple Outputs (Labels $Y$):** The label $y^{(i)}$ is a vector (e.g., $4 \\times 1$), where each dimension corresponds to a different object detection task:\n",
+    "    1.  Pedestrian ($y_1$)\n",
+    "    2.  Car ($y_2$)\n",
+    "    3.  Stop Sign ($y_3$)\n",
+    "    4.  Traffic Light ($y_4$)\n",
+    "    * *Note:* Unlike Softmax Classification, where only one label is possible, in MTL, one input can have multiple positive labels (e.g., Car=1 and Stop Sign=1).\n",
+    "\n",
+    "**Loss Function:** The overall cost function is the sum of the logistic loss (binary cross-entropy) calculated for each individual output task ($j$) across all training examples ($i$).\n",
+    "\n",
+    "$$\n",
+    "J = \\frac{1}{m} \\sum_{i=1}^{m} \\sum_{j=1}^{4} \\mathcal{L}_{\\text{logistic}}(y^{(i)}_j, \\hat{y}^{(i)}_j)\n",
+    "$$\n",
+    "\n",
+    "### When Multi-Task Learning Makes Sense\n",
+    "\n",
+    "MTL is an effective strategy when specific conditions are met:\n",
+    "\n",
+    "* **Shared Low-Level Features:** The set of tasks must logically benefit from sharing early-layer features.\n",
+    "    * *Example:* Detecting cars, stop signs, and traffic lights (all road features) benefits from shared features like edge detection and shape recognition.\n",
+    "* **Data Aggregation Benefit (The Boost):** When focused on any single task (Task A), the aggregate data from all other tasks provides a significant data augmentation boost to Task A.\n",
+    "    * *Scenario:* If one task (Task $A_{100}$) only has 1,000 examples, but the other 99 tasks contribute 99,000 examples, the shared network architecture effectively leverages 100,000 examples to learn its low-level features.\n",
+    "* **Sufficient Network Size:** You must be able to train a large enough neural network to handle the complexity of all tasks simultaneously. If the network is too small, MTL can actually *hurt* performance compared to training separate networks.\n",
+    "\n",
+    "### Handling Partial Labels\n",
+    "\n",
+    "MTL is robust even if some training examples only have a subset of labels. If a specific label $y^{(i)}_j$ is a question mark or unlabeled (e.g., the labeler didn't check for traffic lights in that image), that specific term is omitted from the overall loss summation. The network still learns from the labels that *are* present.\n",
+    "\n",
+    "### MTL vs. Transfer Learning\n",
+    "\n",
+    "| Feature | Multi-Task Learning (MTL) | Transfer Learning (TL) |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Process** | Parallel; all tasks trained simultaneously. | Sequential; learn Task A, then fine-tune for Task B. |\n",
+    "| **Data Requirements** | Data amount for each task is often similar. | Task A (Source) requires *much* more data than Task B (Target). |\n",
+    "| **Goal** | Improve all tasks by sharing a representation. | Improve Task B (Target) by leveraging knowledge from Task A. |\n",
+    "| **Usage in Practice** | Less common; best application is often in Computer Vision (object detection). | Used much more often for low-data problems (e.g., medical diagnosis). |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6b16e07",
+   "metadata": {},
    "source": []
   }
  ],
